develop Member.Delete APi
